@@ -1,4 +1,7 @@
 <?php
+
+declare(strict_types=1);
+
 namespace Cobweb\ExternalimportTut\Transformation;
 
 /*
@@ -18,10 +21,6 @@ use TYPO3\CMS\Core\SingletonInterface;
 
 /**
  * Example transformation functions for the 'externalimport_tut' extension
- *
- * @author Francois Suter (Idéative) <typo3@ideative.ch>
- * @package TYPO3
- * @subpackage tx_externalimporttut
  */
 class CastTransformation implements SingletonInterface
 {
@@ -34,7 +33,7 @@ class CastTransformation implements SingletonInterface
      * @param array $params Additional parameters from the TCA
      * @return int
      */
-    public function castToInteger(array $record, $index, array $params): string
+    public function castToInteger(array $record, $index, array $params): int
     {
         return (int)($record[$index] ?? '0');
     }
