@@ -1,0 +1,12 @@
+<?php
+
+return [
+    'tx_externalimport_tut-department' => [
+        'provider' => TYPO3\CMS\Core\Imaging\IconProvider\SvgIconProvider::class,
+        'source' => 'EXT:externalimport_tut/Resources/Public/Icons/Department.svg'
+    ],
+    'tx_externalimport_tut-team' => [
+        'provider' => TYPO3\CMS\Core\Imaging\IconProvider\SvgIconProvider::class,
+        'source' => 'EXT:externalimport_tut/Resources/Public/Icons/Team.svg'
+    ],
+];
