@@ -1,3 +1,9 @@
+[![Latest Stable Version](https://poser.pugx.org/cobweb/externalimport_tut/v)](https://packagist.org/packages/cobweb/externalimport_tut)
+[![Total Downloads](https://poser.pugx.org/cobweb/externalimport_tut/downloads)](https://packagist.org/packages/cobweb/externalimport_tut)
+[![Monthly Downloads](https://poser.pugx.org/cobweb/externalimport_tut/d/monthly)](https://packagist.org/packages/cobwebexternalimport_tut)
+[![Daily Downloads](https://poser.pugx.org/cobweb/externalimport_tut/d/daily)](https://packagist.org/packages/cobweb/externalimport_tut)
+[![PHP Version Require](https://poser.pugx.org/cobweb/externalimport_tut/require/php)](https://packagist.org/packages/cobweb/externalimport_tut)
+
 # External Import tutorial
 
 A tutorial for the TYPO3 external_import extension.
