@@ -1,40 +1,32 @@
 <?php
 
-/*********************************************************************
- * Extension configuration file for ext "externalimport_tut".
- *
- * Generated by ext 03-08-2016 19:39 UTC
- *
- * https://github.com/t3elmar/Ext
- *********************************************************************/
-
 $EM_CONF[$_EXTKEY] = [
-        'title' => 'External Import Tutorial',
-        'description' => 'Tutorial for the External Import extension. Contains the manual and the necessary files.',
-        'category' => 'example',
-        'author' => 'Francois Suter (Idéative)',
-        'author_email' => 'typo3@ideative.ch',
-        'state' => 'stable',
-        'uploadfolder' => 0,
-        'createDirs' => '',
-        'clearCacheOnLoad' => 1,
-        'author_company' => '',
-        'version' => '3.0.1',
-        'constraints' =>
+    'title' => 'External Import Tutorial',
+    'description' => 'Tutorial for the External Import extension. Contains the manual and the necessary files.',
+    'category' => 'example',
+    'author' => 'Francois Suter (Idéative)',
+    'author_email' => 'typo3@ideative.ch',
+    'state' => 'stable',
+    'uploadfolder' => 0,
+    'createDirs' => '',
+    'clearCacheOnLoad' => 1,
+    'author_company' => '',
+    'version' => '3.0.1',
+    'constraints' =>
+        [
+            'depends' =>
                 [
-                        'depends' =>
-                                [
-                                        'external_import' => '7.0.0-0.0.0',
-                                        'svconnector_csv' => '4.0.0-0.0.0',
-                                        'svconnector_feed' => '4.0.0-0.0.0',
-                                        'news' => '11.0.0-0.0.0',
-                                        'typo3' => '11.5.0-12.4.99',
-                                ],
-                        'conflicts' =>
-                                [
-                                ],
-                        'suggests' =>
-                                [
-                                ],
+                    'external_import' => '7.0.0-0.0.0',
+                    'svconnector_csv' => '4.0.0-0.0.0',
+                    'svconnector_feed' => '4.0.0-0.0.0',
+                    'news' => '11.0.0-0.0.0',
+                    'typo3' => '11.5.0-12.4.99',
                 ],
+            'conflicts' =>
+                [
+                ],
+            'suggests' =>
+                [
+                ],
+        ],
 ];
