@@ -1,3 +1,8 @@
+2022-05-06 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Drop compatibility with TYPO3 10, modernize and clean up code
+	* Ensure compatibility with External Import 7.0.0
+
 2021-11-19 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Add example about importing translations, resolves #2
